# ML-Mundial-2026

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: model_evaluation.md  new_pc_setup.md  tactical_profiles_todo.md
scripts/: audit_worldcup2026_manual_detail_coverage.py  collect_extra_time_data.py  collect_penalty_shootout_data.py  create_portable_bundle.py  evaluate_penalty_shootout_model.py  generate_model_evaluation_report.py  generate_worldcup2026_top4_visual.py  predict_next4_with_all_played_worldcup.py  render_premundial_bracket.py  render_premundial_consensus_bracket.py  restore_portable_bundle.py  run_premundial_bracket_simulation.py  run_worldcup2026_consensus_bracket.py  run_worldcup2026_fixed_r32_no_results.py  run_worldcup2026_top4_simulation.py  train_extra_time_model.py  train_penalty_shootout_model.py  train_worldcup2026_all_played_model.py  train_worldcup2026_holdout_model.py  update_worldcup2026_aet_90min_from_fotmob.py  update_worldcup2026_manual_detail_from_espn.py  update_worldcup2026_manual_detail_from_thescore.py  verify_portable_setup.py  worldcup2026_default_auc_evaluation.py  worldcup2026_espn_detail_walkforward.py  worldcup2026_model_metrics.py  worldcup2026_out_of_sample_comparison.py  worldcup2026_rating_signal_ablation.py  worldcup2026_walk_forward_retrain_evaluation.py
tests/: test_api_football_provider.py  test_clinical_finishing.py  test_club_attacking_talent.py  test_counter_efficiency.py  test_espn_provider.py  test_etl.py  test_extra_time_model.py  test_fifa_ranking.py  test_football_data_provider.py  (+9 more)
(+38 files in other folders)
