[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "kinela"
version = "0.1.0"
description = "Reproducible football data collection and prediction pipeline"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib==1.4.2",
  "lightgbm==4.6.0",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "requests>=2.32",
  "scikit-learn==1.6.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]
ml = [
  "joblib==1.4.2",
  "lightgbm==4.6.0",
  "matplotlib>=3.9",
  "numpy>=2.0",
  "openpyxl>=3.1",
  "pandas>=2.2",
  "requests>=2.32",
  "scikit-learn==1.6.1",
]

[project.scripts]
kinela = "kinela.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
